bug fix to dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -233,7 +233,3 @@ small {
   margin: 0 0 0 0;
 }
 
-.mode {
-  width: 30px;
-  cursor: pointer;
-}
